--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://localhost:9000/</sonar.host.url>
+		<sonar.host.url>http://127.0.0.1:9000/</sonar.host.url>
                 <sonar.login>squ_f89303758ec5d2af7727435fe3dcabc0e5d5e8ff</sonar.login>
 		
              
